Fix: responsiveness on smaller screens

--- a/src/components/skills/skillsContainer/skillsContainer.module.css
+++ b/src/components/skills/skillsContainer/skillsContainer.module.css
@@ -2,4 +2,12 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 1rem;
+
+    padding-bottom: 25%;
+}
+
+@media screen and (min-width: 1024px) {
+    .cardsContainer {
+        padding-bottom: 0;
+    }
 }
